[package]
name = "medium-api"
version = "0.1.0"
edition = "2021"
description = "Rust client for fetching Medium articles via RSS feeds"
license = "MIT"
repository = "https://github.com/socialsbase/medium-api"
documentation = "https://docs.rs/medium-api"
keywords = ["medium", "rss", "api", "articles", "blog"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"
authors = ["socialsbase"]
exclude = [
    ".github/",
    "tests/",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rss = "2"
html2md = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
expect_used = "warn"
